ClusterReader Fine Grained Access Control
ClusterReader RBAC Role should provide minimal permissions.
Also enable end-users to decide via Values whether to enable
verb list on k8s secrets.

--- a/wiz-kubernetes-connector/values.yaml
+++ b/wiz-kubernetes-connector/values.yaml
@@ -15,6 +15,7 @@ image:
 
 clusterReader:
   installRbac: true
+  enableListSecret: true
   serviceAccount:
     create: true
     # Annotations to add to the service account
